fix: refactoring text alignment

--- a/src/app/components/searchBar/search-bar.component.css
+++ b/src/app/components/searchBar/search-bar.component.css
@@ -1,6 +1,7 @@
 .app-container {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   height: 40px;
   width: 70%;
   max-width: 1280px;
@@ -14,12 +15,14 @@ p {
 
 .mensagem {
   margin-left: 5px;
-  font-size: 12px;
+  font-size: 1rem;
   font-weight: 400;
+
 }
 
 input {
   width: 45%;
+  height: 40px;
   background-color: #D9D9D9;
   border: none;
 }
@@ -29,6 +32,6 @@ button {
   width: 10%;
   background-color: #D9D9D9;
   border: none;
-  font-size: 12px;
+  font-size: 1rem;
   font-weight: 400;
 }
